Trying to Fix on Mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -31,7 +31,6 @@ summary {
   display: block;
 }
 
-audio,
 canvas,
 progress,
 video {
